// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollabPopup calls handleDoneButton and resets state when Done is clicked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <input
          data-testid="collab-input"
          placeholder="Add Collaborators"
          value="alice"
        />
        <div
          data-testid="popup-content"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CollabPopup__ProfileLinkWrapper-sc-1n9z3ul-5 escqfF ckFvxY fjNDtr lcoAov"
              >
                <div
                  data-testid="profile-link"
                >
                  alice
                </div>
                <button
                  aria-checked="true"
                  data-testid="checkbox-alice"
                >
                  Checked
                </button>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__Divider-sc-1n9z3ul-6 escqfF bMcJrr"
              />
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__DoneButtonWrapper-sc-1n9z3ul-7 escqfF lkBWGm"
              >
                <button
                  data-testid="done-button"
                >
                  Done
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <input
        data-testid="collab-input"
        placeholder="Add Collaborators"
        value="alice"
      />
      <div
        data-testid="popup-content"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CollabPopup__ProfileLinkWrapper-sc-1n9z3ul-5 escqfF ckFvxY fjNDtr lcoAov"
            >
              <div
                data-testid="profile-link"
              >
                alice
              </div>
              <button
                aria-checked="true"
                data-testid="checkbox-alice"
              >
                Checked
              </button>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__Divider-sc-1n9z3ul-6 escqfF bMcJrr"
            />
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__DoneButtonWrapper-sc-1n9z3ul-7 escqfF lkBWGm"
            >
              <button
                data-testid="done-button"
              >
                Done
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`CollabPopup calls onCollabChanged when profile is toggled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <input
          data-testid="collab-input"
          placeholder="Add Collaborators"
          value="alice"
        />
        <div
          data-testid="popup-content"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CollabPopup__ProfileLinkWrapper-sc-1n9z3ul-5 escqfF ckFvxY fjNDtr lcoAov"
              >
                <div
                  data-testid="profile-link"
                >
                  alice
                </div>
                <button
                  aria-checked="true"
                  data-testid="checkbox-alice"
                >
                  Checked
                </button>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__Divider-sc-1n9z3ul-6 escqfF bMcJrr"
              />
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__DoneButtonWrapper-sc-1n9z3ul-7 escqfF lkBWGm"
              >
                <button
                  data-testid="done-button"
                >
                  Done
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <input
        data-testid="collab-input"
        placeholder="Add Collaborators"
        value="alice"
      />
      <div
        data-testid="popup-content"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CollabPopup__ProfileLinkWrapper-sc-1n9z3ul-5 escqfF ckFvxY fjNDtr lcoAov"
            >
              <div
                data-testid="profile-link"
              >
                alice
              </div>
              <button
                aria-checked="true"
                data-testid="checkbox-alice"
              >
                Checked
              </button>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__Divider-sc-1n9z3ul-6 escqfF bMcJrr"
            />
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__DoneButtonWrapper-sc-1n9z3ul-7 escqfF lkBWGm"
            >
              <button
                data-testid="done-button"
              >
                Done
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`CollabPopup calls onCollabChanged when unselected profile is clicked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <input
          data-testid="collab-input"
          placeholder="Add Collaborators"
          value="bob"
        />
        <div
          data-testid="popup-content"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CollabPopup__ProfileLinkWrapper-sc-1n9z3ul-5 escqfF ckFvxY fjNDtr lcoAov"
              >
                <div
                  data-testid="profile-link"
                >
                  bob
                </div>
                <button
                  aria-checked="false"
                  data-testid="checkbox-bob"
                >
                  Unchecked
                </button>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__DoneButtonWrapper-sc-1n9z3ul-7 escqfF lkBWGm"
              >
                <button
                  data-testid="done-button"
                >
                  Done
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <input
        data-testid="collab-input"
        placeholder="Add Collaborators"
        value="bob"
      />
      <div
        data-testid="popup-content"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CollabPopup__ProfileLinkWrapper-sc-1n9z3ul-5 escqfF ckFvxY fjNDtr lcoAov"
            >
              <div
                data-testid="profile-link"
              >
                bob
              </div>
              <button
                aria-checked="false"
                data-testid="checkbox-bob"
              >
                Unchecked
              </button>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__DoneButtonWrapper-sc-1n9z3ul-7 escqfF lkBWGm"
            >
              <button
                data-testid="done-button"
              >
                Done
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`CollabPopup renders initial state with heading and subheading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <input
          data-testid="collab-input"
          placeholder="Add Collaborators"
          value=""
        />
        <div
          data-testid="popup-content"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__PopupSVGContainer-sc-1n9z3ul-1 escqfF kPoCJG"
                >
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
                  >
                    <svg
                      data-testid="collab-svg"
                    />
                  </div>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollaboratorHeading-sc-1n9z3ul-2 escqfF ibkRpA"
                >
                  Add Collaborators
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollaboratorSubHeading-sc-1n9z3ul-3 escqfF ewmmgl"
                >
                  Their username will be added to the post.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <input
        data-testid="collab-input"
        placeholder="Add Collaborators"
        value=""
      />
      <div
        data-testid="popup-content"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__PopupSVGContainer-sc-1n9z3ul-1 escqfF kPoCJG"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
                >
                  <svg
                    data-testid="collab-svg"
                  />
                </div>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollaboratorHeading-sc-1n9z3ul-2 escqfF ibkRpA"
              >
                Add Collaborators
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollaboratorSubHeading-sc-1n9z3ul-3 escqfF ewmmgl"
              >
                Their username will be added to the post.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`CollabPopup renders selected profiles 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <input
          data-testid="collab-input"
          placeholder="Add Collaborators"
          value="alice"
        />
        <div
          data-testid="popup-content"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CollabPopup__ProfileLinkWrapper-sc-1n9z3ul-5 escqfF ckFvxY fjNDtr lcoAov"
              >
                <div
                  data-testid="profile-link"
                >
                  alice
                </div>
                <button
                  aria-checked="true"
                  data-testid="checkbox-alice"
                >
                  Checked
                </button>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__Divider-sc-1n9z3ul-6 escqfF bMcJrr"
              />
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__DoneButtonWrapper-sc-1n9z3ul-7 escqfF lkBWGm"
              >
                <button
                  data-testid="done-button"
                >
                  Done
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <input
        data-testid="collab-input"
        placeholder="Add Collaborators"
        value="alice"
      />
      <div
        data-testid="popup-content"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CollabPopup__ProfileLinkWrapper-sc-1n9z3ul-5 escqfF ckFvxY fjNDtr lcoAov"
            >
              <div
                data-testid="profile-link"
              >
                alice
              </div>
              <button
                aria-checked="true"
                data-testid="checkbox-alice"
              >
                Checked
              </button>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__Divider-sc-1n9z3ul-6 escqfF bMcJrr"
            />
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__DoneButtonWrapper-sc-1n9z3ul-7 escqfF lkBWGm"
            >
              <button
                data-testid="done-button"
              >
                Done
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`CollabPopup shows loading indicator when isLoading is true 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <input
          data-testid="collab-input"
          placeholder="Add Collaborators"
          value="alice"
        />
        <div
          data-testid="popup-content"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
            >
              <div
                data-testid="loading"
              >
                Loading...
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__DoneButtonWrapper-sc-1n9z3ul-7 escqfF lkBWGm"
              >
                <button
                  data-testid="done-button"
                >
                  Done
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <input
        data-testid="collab-input"
        placeholder="Add Collaborators"
        value="alice"
      />
      <div
        data-testid="popup-content"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__CollabPopupContainer-sc-1n9z3ul-4 escqfF imEtJy"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 bsDNFv ckFvxY leZDxE"
          >
            <div
              data-testid="loading"
            >
              Loading...
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CollabPopup__DoneButtonWrapper-sc-1n9z3ul-7 escqfF lkBWGm"
            >
              <button
                data-testid="done-button"
              >
                Done
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
